plugins {
    id("java")
}

val MINECRAFT_VERSION by extra { "1.21.1" }
val FORGE_VERSION by extra { "52.1.0" }
val VOXELMAP_VERSION by extra { "1.15.11" }

val MOD_VERSION by extra { "$MINECRAFT_VERSION-$VOXELMAP_VERSION" }

allprojects {
    apply(plugin = "java")
    apply(plugin = "maven-publish")
}

tasks.withType<JavaCompile> {
    options.encoding = "UTF-8"
}

tasks.jar {
    enabled = false
}

subprojects {
    apply(plugin = "maven-publish")

    java.toolchain.languageVersion = JavaLanguageVersion.of(17)

    tasks.processResources {
        filesMatching("META-INF/mods.toml") {
            expand(mapOf("version" to MOD_VERSION))
        }
    }

    version = MOD_VERSION
    group = "com.mamiyaotaru"

    tasks.withType<JavaCompile> {
        options.encoding = "UTF-8"
        options.release.set(17)
    }

    tasks.withType<GenerateModuleMetadata>().configureEach {
        enabled = false
    }
}
